# pulldown-cmark-codeblock

./: Cargo.toml  README.md  flake.nix
.github/: dependabot.yml  settings.yml
.github/workflows/: checks.yml
nix/modules/: checks.nix  devshell.nix  fmt.nix  pkgs.nix
nix/pkgs/cargo-clippy/: package.nix
nix/pkgs/cargo-fmt/: package.nix
nix/pkgs/pulldown-cmark-codeblock/: package.nix
src/: lib.rs
